--- a/competition-service/src/main/resources/i18n/messages_en_US.properties
+++ b/competition-service/src/main/resources/i18n/messages_en_US.properties
@@ -13,3 +13,13 @@ F8=Eighth-finals
 F4=Quarterfinals
 SF=Semifinals
 F=Final
+InvalidSameCountryPhaseException=This phase doesn't allow duplicated countries
+InvalidLocalException_ALREADY_IN_USE=Schedule already reserved to another event
+InvalidLocalException_LIMIT_EXCEEDED=Limit of events exceeded for a day in this location
+InvalidLocalException_INEXISTENT=Inexistent Local. Check the /local resource to verify all available locals
+InvalidDatesException_END_LOWER_THAN_INIT=End date lower than the initial
+InvalidDatesException_LESS_THAN_TIME_LIMIT=Not time enough to the event (at least 30 minutes)
+IncompleteCompetitionException=Not enough information. Missing fields: {0}
+InvalidModalityException=Inexistent Modality. Check the /modality resource to verify all available modalities
+InexistentPhase=Inexistent phase. Check the /phase resource to verify all available phases
+InexistentCountry=Inexistent country. Check the /country resource to verify all available countries
