--- a/competition-service/src/main/resources/i18n/messages_pt_BR.properties
+++ b/competition-service/src/main/resources/i18n/messages_pt_BR.properties
@@ -13,3 +13,13 @@ F8=Oitavas de final
 F4=Quartas de final
 SF=Semifinal
 F=Final
+InvalidSameCountryPhaseException=Esta fase não permite dois competidores do mesmo país
+InvalidLocalException_ALREADY_IN_USE=Horário já reservado para outro evento
+InvalidLocalException_LIMIT_EXCEEDED=Quantidade máxima de 4 eventos atingida por dia
+InvalidLocalException_INEXISTENT=Local inexistente. Confira em /local todos os locais disponíveis
+InvalidDatesException_END_LOWER_THAN_INIT=Data fim menor que data de início
+InvalidDatesException_LESS_THAN_TIME_LIMIT=Tempo mínimo do evento é de 30 minutos
+IncompleteCompetitionException=Existem campos não preenchidos: {0}
+InvalidModalityException=Modalidade inexistente. Confira em /modality todos as modalidades disponíveis
+InexistentPhase=Etapa inexistente. Confira em /phase todos as etapas disponíveis
+InexistentCountry=Pais inexistente. Confira em /country todos os países disponíveis
